# spimulator-examples

./: CMakeLists.txt  Dockerfile  EXAMPLES.txt  Makefile  buildDebug.sh  codeblocksbuildDebug.sh
01-helloworld/: 01-helloworld-1.c  01-helloworld-3.c
02-print1through10/: 02-print1through10-2.c  02-print1through10.asm
03-increment-ints/: 03-increment-ints-1.asm  03-increment-ints-1.c
04-get-char-from-user/: 04-get-char-from-user-2.asm  04-get-char-from-user-2.c
05-print-out-ascii/: 05-print-out-ascii-1.asm  05-print-out-ascii-1.c  05-print-out-ascii-3.c
06-commaAndPeriodCounter/: 06-commaAndPeriodCounter-1.c  06-commaAndPeriodCounter-3.c
07-subrountines/: 07-subrountines-1.asm
08-testStringsForEquality/: 08-testStringsForEquality-1.asm  08-testStringsForEquality-2.c
book/source/: ch01.rst  conf.py  index.rst
entrypoint/: entrypoint.sh
operatingsystemfunctions/include/: operatingsystemfunctions.h
src/01-helloworld/: 01-helloworld-1.c  01-helloworld-2.c  01-helloworld.asm
src/02-print1through10/: 02-print1through10-1.c  02-print1through10-3.c
src/03-increment-ints/: 03-increment-ints-2.asm  03-increment-ints-2.c  03-increment-ints-3.c
src/04-get-char-from-user/: 04-get-char-from-user-1.asm  04-get-char-from-user-1.c  04-get-char-from-user-3.c
src/05-print-out-ascii/: 05-print-out-ascii-2.c
src/06-commaAndPeriodCounter/: 06-commaAndPeriodCounter-2.c  06-commaAndPeriodCounter.asm
src/07-subrountines/: 07-subrountines-1.c  07-subrountines-2.asm  07-subrountines-2.c  07-subrountines-3.c
src/08-testStringsForEquality/: 08-testStringsForEquality-1.c
src/operatingsystemfunctions/src/: operatingsystemfunctions.c
src/template/: buildDebug.sh  macBuildDebug.sh
src/template/src/: template.c
template/: CMakeLists.txt  windowsBuildDebug.bat
